--- a/style.css
+++ b/style.css
@@ -96,11 +96,11 @@ body {
     position: absolute;
     top: 0;
     margin-top: 104px;
-    left: 8px;
-    flex-direction: column;
+    left: 0;
+    flex-direction: row;
     width: 100%;
     justify-content: center;
-    align-items: end;
+    align-items: baseline;
   }
   #menu-toggle ~ .menu li {
     height: 0;
@@ -135,6 +135,11 @@ body {
 #sname{
   position: relative;
   left: 40%;
+}
+@media (max-width: 1100px) {
+  #intro1{
+    margin-top: 10%;
+  }
 }
 #intro{
   position: relative;
