--- a/style.css
+++ b/style.css
@@ -18,6 +18,15 @@ body {
   font-weight:bolder;
   font-size:25px;
 }
+#intro{
+  position: relative;
+  width: 90%;
+  margin-left: 5%;
+  height: 628px;
+  border: 1px solid black;
+  margin-bottom: 3.8%;
+  margin-top: 4%;
+}
 /**hover on menu/nav bar**/
 .menu li:hover{
   color:black;
@@ -120,13 +129,14 @@ body {
     color: white;
     background-color: #333;
   }
-  #intro1{
-    margin-top: 10%;
+  #intro{
+    margin-top: 12.5%;
+    margin-bottom: 3.5%;
   }
 }
 @media only screen and (max-width: 600px) {
   #intro1{
-    margin-top: 15%;
+    margin-top: 12.1%;
   }
   .nav{
     size: inherit;
@@ -147,40 +157,7 @@ body {
   position: relative;
   left: 40%;
 }
-#intro{
-  position: relative;
-  width: 99%;
-  height: 477px;
-  border: 1px solid black;
-}
-/**test darkmode css only!**/
-#darklight{
- position: relative;
-}
-#outerWrapper{
-  width:180px;
-  height: 50px;
-  padding: 10px;
-  margin: 100px auto 0 auto;
-  border-radius: 40px;
-  box-shadow: 0 0  10px 6px #EAEBED;
-  background: #fff;
-}
-#innerWrapper{
-  height:100%;
-  border-radius:40px;
-  overflow:hidden;
-  position:relative;
-}
-.radio{
-  width:90px;
-  height:100%;
-  position:absolute;
-  margin:0;
-}
-#light{
-  right: 0;
-}
+
 
 footer {
   background-color: #333;
