--- a/style.css
+++ b/style.css
@@ -186,18 +186,20 @@ body {
   }
   #hello{
     font-size: 60px;
-    margin-left: 10%;
+    margin-left: 25%;
   }
   #name1{
     font-size: 40px;
-    margin-left: 10%;
-    margin-top: 25%;
+    margin-left: 13%;
+    margin-top: 40%;
+    width: 80%;
+    text-align: center;
   }
   #smolintro{
     width: 70%;
     text-align: center;
-    margin-left: 10%;
-    margin-top: 55%;
+    margin-left: 15%;
+    margin-top: 75%;
     font-weight: bolder;
   }
 }
