--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
   font-family: 'Courier New', Courier, monospace;
   font-size: 40px;
   margin-left: 10%;
-  margin-top: 9%;
+  margin-top: 15%;
 }
 #smolintro{
   position: absolute;
@@ -63,7 +63,7 @@ body {
   width: 37%;
   text-align: justify;
   margin-left: 10%;
-  margin-top: 13.5%;
+  margin-top: 23%;
   font-weight: bolder;
 }
 /**hover on menu/nav bar**/
@@ -169,6 +169,40 @@ body {
     color: white;
     background-color: #333;
   }
+}
+@media only screen and (max-width: 800px) {
+  #intro{
+    margin-top: 12.5%;
+    margin-bottom: 3.5%;
+  }
+  #intro{
+    margin-top: 12.5%;
+    margin-bottom: 3.9%;
+  }
+  #hello{
+    font-size: 60px;
+    margin-left: 33%;
+  }
+  #name1{
+    font-size: 40px;
+    margin-left: 13%;
+    margin-top: 23%;
+    width: 80%;
+    text-align: center;
+  }
+  #smolintro{
+    width: 70%;
+    text-align: center;
+    margin-left: 18%;
+    margin-top: 50%;
+    font-weight: bolder;
+  }
+}  
+@media only screen and (max-width: 600px) {
+  #intro{
+    margin-top: 12.5%;
+    margin-bottom: 3.5%;
+  }
   #logo1{
     position: absolute;
     width: 60px;
@@ -203,12 +237,7 @@ body {
     font-weight: bolder;
   }
 }
-@media only screen and (min-width: 360px) and (max-width: 480px) {
-  #intro{
-    margin-top: 12.5%;
-    margin-bottom: 3.5%;
-  }
-}
+
 
 footer {
   position: relative;
