--- a/style.css
+++ b/style.css
@@ -55,6 +55,36 @@ body {
 #p1:hover{
   color: blue;
 }
+.about{
+  max-width: 100%;
+  height: 500px;
+  margin: 0 20px;
+  display: flex;
+  flex-direction: row;
+  grid-gap: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  border: 1px solid red;
+}
+.projects{
+  max-width: 100%;
+  height: 500px;
+  margin: 0 20px;
+  display: flex;
+  flex-direction: row;
+  grid-gap: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  border: 1px solid red;
+}
+.contacts{
+  max-width: 100%;
+  height: 500px;
+  margin: 0 20px;
+  display: flex;
+  flex-direction: row;
+  grid-gap: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  border: 1px solid red;
+}
 footer {
   position: relative;
   background-color: #333;
