--- a/style.css
+++ b/style.css
@@ -116,14 +116,32 @@ tr, td {
   grid-gap: 10px;
   font-family: 'Courier New', Courier, monospace;
 }
+#img1::after{
+  
+}
 .contacts{
   max-width: 100%;
   height: 500px;
   margin: 0 20px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   grid-gap: 10px;
   font-family: 'Courier New', Courier, monospace;
+  align-items: center;
+  padding-top: 30%;
+  margin-bottom: -10%;
+}
+.ilink{
+  width: 50px;
+  height: 50px;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
+.ilink:hover{
+  width: 100px;
+  height: 100px;
+  -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(0%);
 }
 footer {
   position: relative;
@@ -277,6 +295,18 @@ footer {
     position: relative;
     font-size: smaller;
     left: 40%;
+  }
+}
+@media only screen and (max-width: 400px) {
+  #skills{
+    margin-right: 20%;
+    padding-left: 25%;
+  }
+  tr, td {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 20px;
   }
   footer{
     max-width: 100%;
