--- a/style.css
+++ b/style.css
@@ -109,15 +109,21 @@ tr, td {
 }
 .projects{
   max-width: 100%;
-  height: 500px;
+  height: 800px;
   margin: 0 20px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   grid-gap: 10px;
   font-family: 'Courier New', Courier, monospace;
 }
-#img1::after{
-  
+#gallery{
+  text-align: center;
+  padding-top: 15%;
+}
+#mainimg{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .contacts{
   max-width: 100%;
@@ -128,7 +134,7 @@ tr, td {
   grid-gap: 10px;
   font-family: 'Courier New', Courier, monospace;
   align-items: center;
-  padding-top: 30%;
+  padding-top: 20%;
   margin-bottom: -10%;
 }
 .ilink{
@@ -283,6 +289,12 @@ footer {
   .about{
     padding-top: 30%;
   }
+  #gallery{
+    padding-top: 60%;
+  }
+  .contacts{
+    padding-top: 50%;
+  }
 }
 @media only screen and (max-width: 600px) {
   #logo1{
@@ -296,17 +308,29 @@ footer {
     font-size: smaller;
     left: 40%;
   }
+  #gallery{
+    padding-top: 100%;
+  }
+  .contacts{
+    padding-top: 50%;
+  }
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
   #skills{
     margin-right: 20%;
     padding-left: 25%;
   }
   tr, td {
     padding-top: 10px;
-    padding-bottom: 20px;
+    padding-bottom:10px;
     padding-left: 10px;
-    padding-right: 20px;
+    padding-right: 10px;
+  }
+  #gallery{
+    padding-top: 120%;
+  }
+  .contacts{
+    padding-top: 65%;
   }
   footer{
     max-width: 100%;
